--- a/net.sourceforge.eclipseccase/META-INF/CHANGELOG.txt
+++ b/net.sourceforge.eclipseccase/META-INF/CHANGELOG.txt
@@ -2,6 +2,24 @@
 =                                                          Change Log                                                                                              =
 ===============================================================================
 
+2.2.34
+=====
+
+
+
+2.2.33
+=====
+
+Bugs:
+
+#362 exetrnel comapre not working after updating to latest plugin release.
+#364 SingleProcess timed out! Process will be restarted! 
+#365 An internal error occurred during: "Refreshing ClearCase Resource States". 
+
+Features:
+
+#120 Add Capability To Label Files Upon Check-In 
+
 2.2.32
 =====
 
