Fixed Feature #124 Follow ui guidelines regarding ellipses in context menu item labels

--- a/net.sourceforge.eclipseccase/META-INF/CHANGELOG.txt
+++ b/net.sourceforge.eclipseccase/META-INF/CHANGELOG.txt
@@ -9,6 +9,7 @@ Feature:
 
 125 	Compare with other View ( unix only).
 122 Uncheckout unmodified files when checking in 
+124 Follow ui guidelines regarding ellipses in context menu item labels 
 
 Bugs:
 
