--- a/net.sourceforge.eclipseccase/META-INF/CHANGELOG.txt
+++ b/net.sourceforge.eclipseccase/META-INF/CHANGELOG.txt
@@ -2,13 +2,15 @@
 =                                                          Change Log                                                                                              =
 ===============================================================================
 
-2.2.45
+2.2.35
 =====
 
 Bugs:
 
 368 NPE on Eclipse shutdown due to null element in state cache 
-
+370 NPE from ccase plugin
+380 Cancel View Private Files Task
+381 update to latest in snapshot view does not work 
 
 2.2.34
 =====
