Fix for bug 382 Sort by History Version in Windows

--- a/net.sourceforge.eclipseccase/META-INF/CHANGELOG.txt
+++ b/net.sourceforge.eclipseccase/META-INF/CHANGELOG.txt
@@ -2,6 +2,14 @@
 =                                                          Change Log                                                                                              =
 ===============================================================================
 
+2.2.36
+=====
+
+Bugs:
+
+382 Sort by History Version in Windows
+
+
 2.2.35
 =====
 
