--- a/net.sourceforge.eclipseccase/META-INF/CHANGELOG.txt
+++ b/net.sourceforge.eclipseccase/META-INF/CHANGELOG.txt
@@ -15,6 +15,7 @@ auto_association been registered to listeners that reacts on "Open Project" even
 Bug: 
 
 #385 Checkout with UCM don't work ( Thanks Hakim).
+#386 With UCM, SetActivity don't work if you confirm directly the dialog (Thanks again Hakim).
 
 
 2.2.36
