--- a/net.sourceforge.eclipseccase/META-INF/CHANGELOG.txt
+++ b/net.sourceforge.eclipseccase/META-INF/CHANGELOG.txt
@@ -2,6 +2,18 @@
 =                                                          Change Log                                                                                              =
 ===============================================================================
 
+2.2.41
+======
+
+
+2.2.40
+======
+
+Bug:
+
+399 Configuration changes can't be saved
+
+
 2.2.39
 ======
 
